开发中 部分提测

--- a/business/index.html
+++ b/business/index.html
@@ -4,6 +4,13 @@
     <title></title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="format-detection" content="telephone=no" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 </head>
 
 <body>
@@ -11,6 +18,9 @@
     </div>
     <script type="text/javascript" src="http://rongyi.b0.upaiyun.com/fe/vue/vue-combo-2.1.8.min.js"></script>
     <script type="text/javascript" src="http://rongyi.b0.upaiyun.com/fe/third_party/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="http://nres.ffan.com/newactivity/ffan-bo-jssdk-0.0.2.min.js"></script>
+    <!-- <script type="text/javascript" src="/public/third_party/jquery.easing.min.js"></script> -->
+    <script type="text/javascript" src="/public/third_party/jQueryRotate.js"></script>
 </body>
 
 </html>
