--- a/business/index.html
+++ b/business/index.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title></title>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="format-detection" content="telephone=no" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-</head>
+    <head>
+        <title></title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="format-detection" content="telephone=no">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    </head>
 
-<body>
-    <div id="app">
-        <router-view></router-view>
-    </div>
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.2/??flexible_css.js,flexible.js"></script>
-    <!-- // <script type="text/javascript" src="http://rongyi.b0.upaiyun.com/fe/vue/vue-combo-2.1.8.min.js"></script> -->
-    <!-- // <script type="text/javascript" src="http://rongyi.b0.upaiyun.com/fe/third_party/jquery-3.1.0.min.js"></script> -->
-    <!-- // <script type="text/javascript" src="http://rongyi.b0.upaiyun.com/fe/third_party/zepto-combo-1.2.0.min.js"></script> -->
-    <!-- // <script type="text/javascript" src="/public/third_party/zepto.js"></script> -->
-</body>
+    <body>
+        <div id="app"></div>
+    </body>
 
 </html>
